--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 env:
-  APP_ID: ${{ secrets.APP_ID }}
+  API_ID: ${{ secrets.APP_ID }}
   API_HASH: ${{ secrets.API_HASH }}
   BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
   FFMPEG: ${{ secrets.FFMPEG }}
