--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
         continue-on-error: true
         timeout-minutes: 355
         run: |
-          python3 main.py
+          bash run.sh
       - name: Loop workflow
         continue-on-error: true
         run: |
