--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         continue-on-error: true
         timeout-minutes: 355
         run: |
-          run docker
+         docker build -t notworking44 . && docker run notworking44
       - name: Loop workflow
         continue-on-error: true
         run: |
